# src/suggest/suggest.routes.js
@@ -1,0 +1,6 @@
+const router = require('express').Router();
+const controller = require('./suggest.controller');
+
+router.get("/suggest", controller.suggest);
+
+module.exports = router;
